Fix: correct buttons position on small screen

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,8 +41,8 @@ body {
     background-color: var(--btn-color);
 }
 aside {
-    top: 1em;
-    left: 1em;
+    top: 0.2em;
+    left: 0.2em;
 }
 
 .player1-turn {
@@ -131,8 +131,8 @@ main p {
 @media screen and (min-width: 380px) {
 
     aside {
-        top: 1.2em;
-        left: 1.2em;
+        top: 0.4em;
+        left: 0.4em;
     }
 
     #label1::after, #label2::after {
@@ -192,6 +192,11 @@ main p {
         height: 15px;
         width: 15px;
 
+    }
+
+    aside {
+        top: 1em;
+        left: 1em;
     }
 
 }
